--- a/src/SiQ/SupportBundle/Resources/views/Support/formulaire.html.twig
+++ b/src/SiQ/SupportBundle/Resources/views/Support/formulaire.html.twig
@@ -3,7 +3,7 @@
         
          <form method="post" {{ form_enctype(form) }}>
                  {{ form_widget(form) }}
-            <input  type="submit" class="btn btn-primary" />
+            <input  type="submit" class="btn btn-primary" name="Enregister"  value="Enregistrer" />
          </form>
     
    </div>
